# tasks-api-rocket

./: .gitignore  Cargo.toml  README.md
migrations/2023-02-03-191126_create-tasks/: up.sql
src/: db.rs  main.rs  schema.rs
src/models/: auth.rs  mod.rs  tasks.rs  users.rs
src/routes/: auth_routes.rs  mod.rs  task_routes.rs  user_routes.rs
src/services/: mod.rs  task_services.rs  user_services.rs
src/utils/: crypt.rs  error.rs  jwt.rs  mod.rs
