[package]
name = "rocket"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono", "numeric", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0.104", features = ["derive"] }
jsonwebtoken = "8.2.0"
bcrypt = "0.13.0"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde"
]
